<resources>
    <string name="app_name">MAGPIE Sensor</string>

    <!-- MainActivity -->
    <string name="bioharness_btn_connect">Connect BioHarness 3</string>
    <string name="bioharness_btn_disconnect">Disconnect BioHarness 3</string>
    <string name="glucose">Glucose</string>
    <string name="glucose_send_event">Send Glucose Event</string>
    <string name="glucose_unit">mmol/l</string>
    <string name="timestamp_btn">Timestamp</string>
    <string name="timestamp_txtview">Timestamp:</string>
    <string name="value">Value</string>
    <string name="value_empty">-</string>
    <string name="weight">Weight</string>
    <string name="weight_send_event">Send Weight Event</string>
    <string name="weight_unit">kg</string>

    <!-- About Strings -->
    <string name="about_app">About MAGPIE Sample</string>
    <string name="magpie_info">More information about MAGPIE can be found here.</string>
    <string name="magpie_url">http://www.hevs.ch/en/mini-sites/projets-produits/aislab/projets/magpie-4826</string>
    <string name="third_party_announce">The android-betterpickers software may be included in this application.
        This software contains the following license and notice below:</string>
    <string name="third_party_license">Copyright 2013 Derek Brameyer\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
</resources>
