<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/aboutTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magpie_info"/>

    <TextView
        android:id="@+id/announceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutTxtView"
        android:layout_marginTop="8dp"
        android:text="@string/third_party_announce"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/announceTxtView"
        android:layout_marginTop="8dp"
        android:text="@string/third_party_license"/>

</RelativeLayout>
